fixes in the room

--- a/src/app/mainroot/howitworks/howitworks.component.html
+++ b/src/app/mainroot/howitworks/howitworks.component.html
@@ -28,7 +28,7 @@
     <div class="col-md-5">
       <h4 class="font-weight-bold">Still have questions?</h4>
       <p>Send us a message and we'll get back to you to address any of your concerns.</p>
-      <a href="">Contact Us</a>
+      <a routerLink="/contact">Contact Us</a>
     </div>
 
     <div class="col-md-5 lastoflast">
