--- a/src/app/mainroot/landingvenue/landingvenue.component.html
+++ b/src/app/mainroot/landingvenue/landingvenue.component.html
@@ -113,7 +113,6 @@
             </ul>
           </div>
         </div>
-
         <div class="col-12">
           <div class="Accordion-header" data-toggle="collapse" data-target="#collapseFour">
             <i class="fa fa-pencil fa-3x"></i>
@@ -127,87 +126,12 @@
         </div>
       </div>
     </div>
-
-    <div id="partern-pane" class="col-12 section-container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card-container">
-            <div class="card-container__info">
-              <div class="card-main-title">
-                Where are we
-              </div>
-              <div class="card-sub-title">
-                NOW
-              </div>
-              <ul class="card-content">
-                <li>chicago</li>
-                <li>Milwaukee</li>
-                <li>Indianapolis</li>
-              </ul>
-              <div class="card-sub-title">
-                COMING SOON
-              </div>
-              <ul class="card-content">
-                <li>Washington D.C</li>
-                <li>Dallas</li>
-                <li>Nashville</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card-container">
-            <div class="card-container__info">
-              <div class="card-main-title">
-                Who We Partner With
-              </div>
-              <div class="row my-5">
-                <div class="col-12"><img src="/assets/images/partnerlogo/gibsons.png" class="img-fluid" alt=""></div>
-                <div class="col-12"><img src="/assets/images/partnerlogo/lettus.jpg" class="img-fluid" alt=""></div>
-                <div class="col-12"><img src="/assets/images/partnerlogo/Levy.svg.png" class="img-fluid" alt=""></div>
-                <div class="col-12"><img src="/assets/images/partnerlogo/Rockit.png" class="img-fluid" alt=""></div>
-              </div>
-              <div class="card-sub-title text-center">And Many More</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card-container">
-            <div class="card-container__info">
-              <div class="card-main-title mb-5">
-                What To Expect
-              </div>
-
-              <div class="card-sub-title">
-                Avg.Party Size:
-              </div>
-              <div class="card-content mb-5">
-                46 Guests
-              </div>
-
-              <div class="card-sub-title">
-                Avg.Price:
-              </div>
-              <div class="card-content mb-5">
-                $85 Per Guest
-              </div>
-
-              <div class="card-sub-title">
-                Avg.RFPs Sent:
-              </div>
-              <div class="card-content">
-                4 Per Event
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class="col-12">
+      <div class="text-center">
+        <button data-toggle="modal" data-target="#Venue-SignUp" class="btn btn-outline-primary">Venue Signup</button>
       </div>
-
-      <div class="btn-container d-flex justify-content-center"><a href="#" data-toggle="modal" data-target="#Venue-SignUp" class="button">Join Now</a></div>
     </div>
-
   </div>
-
 </div>
+
+
