--- a/src/app/mainroot/team/team.component.scss
+++ b/src/app/mainroot/team/team.component.scss
@@ -6,7 +6,7 @@
 
 @media (min-width: 992px) {
   .height-half{
-    height: 63vh
+    height: 66vh
   }
 }
 
@@ -15,7 +15,7 @@
   font-size: 52px;
   font-weight: 100;
   padding-top: 10px;
-  margin: 25px;
+  margin: 20px;
   font-family: "Helvetica";
   letter-spacing: 2px;
 }
@@ -24,6 +24,7 @@
   text-align: center;
   font-size: 22px;
   font-weight: 100;
+  margin-bottom: 20px;
   padding: 0 35px 35px 35px;
 }
 
@@ -57,71 +58,3 @@
   }
 
 }
-
-//.ourstory{
-//  position:relative;
-//  height: 42vh;
-//  padding: 3rem;
-//  background-color: #00b3ee;
-//  color: white;
-//}
-//.missonstatement .header h1{
-//  font-size: 45px;
-//}
-//
-//.missonstatement .statement{
-//
-//  width: 70%;
-//  margin-left: 14%;
-//}
-//
-//.missonstatement .statement h3{
-//  font-size: 22px;
-//  margin-top: 55px;
-//  line-height: 27px;
-//}
-//
-//.missonstatement a{
-//  text-decoration: underline;
-//  color: #00b3ee;
-//}
-//
-//.ourstory .header{
-//  margin-top: 30px;
-//}
-//
-//.ourstory .header h1{
-//  font-size: 45px;
-//}
-//
-//.ourstory .statement{
-//  margin-top: 20px;
-//  margin-bottom: 20px;
-//  width: 70%;
-//  margin-left: 14%;
-//
-//}
-//
-//.team{
-//  margin-top: 40px;
-//}
-//
-//.team .header h1{
-//  font-size: 45px;
-//  color: #00b3ee;
-//}
-//
-//
-//.teamitem{
-//  /* display: inline-block; */
-//  /* margin-left: 7.5%; */
-//  /* margin-right: 7.5%; */
-//  margin-bottom: 30px;
-//  /* margin-top: 40px; */
-//}
-//
-///* .teamphoto{
-//  height: 250px;
-//  width: 250px;
-//  border-radius: 100%;
-//} */
