created venue user permission guards

--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueroomadminpage/venueroomadminpage.component.scss
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueroomadminpage/venueroomadminpage.component.scss
@@ -35,6 +35,12 @@
   text-decoration: underline;
 }
 
+#displayphotoslink{
+  color: green;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 #photosizenote{
   margin-top: 2%;
   margin-bottom: 2%;
