--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.scss
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.scss
@@ -25,6 +25,12 @@
 
 }
 
+#displayphotos{
+  cursor: pointer;
+  color: green;
+  text-decoration: underline;
+}
+
 #previewbutton{
   padding-right: 10%;
   background-color: purple;
