--- a/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
@@ -33,31 +33,26 @@
       <a style="cursor: pointer" (click)="navtovenue()"><button *ngIf="!deleteconfrimshow && !deleterequestshow" class=" btn previewsubmitbuttons" id="previewbutton">Preview Venue</button></a>
     </div>
   </div>
-  <div *ngIf="!suitsadmin" class="col-4">
-    <div class="float-right">
-      <p style="font-style: 9px">All Changes Saved Automatically</p>
-    </div>
+  <div *ngIf="!suitsadmin" class="col-3">
+    <p style="font-style: 9px">All Changes Saved Automatically</p>
+
   </div>
+</div>
   <div class="row">
-    <div class="col-3 text-center">
+    <div class="col-auto">
       <h5>
-        <strong>Venue Status:
-          <span *ngIf="venueobject.online" style=" color: green; font-style: italic " >Public</span>
-          <span *ngIf="!venueobject.online" style=" color: red ; font-style: italic ">Hidden</span>
-        </strong>
+        <strong>Venue Status:</strong>
       </h5>
     </div>
-    <div *ngIf="suitsadmin && !pushfail" class="col-2">
+    <div class="auto">
+      <h5 *ngIf="venueobject.online" style=" color: green; font-style: italic ">Public</h5>
+      <h5 *ngIf="!venueobject.online" style=" color: red ; font-style: italic ">Hidden</h5>
+    </div>
+    <div *ngIf="suitsadmin && !pushfail" class="col-auto">
       <button class="btn" (click)="changestatus()" *ngIf="venueobject.online && !deleteconfrimshow && !deleterequestshow" id="deactivatebutton">Hide Venue</button>
       <button (click)="changestatus()" *ngIf="!venueobject.online && !deleteconfrimshow && !deleterequestshow" class="btn btn-success">Push Public</button>
     </div>
-    <div *ngIf="pushfail" class="col-auto">
-      Venues must have an image
-    </div>
-    <div style="font-style: 9px" *ngIf="!suitsadmin" class="col-auto">
-      <h5>Please email or call us to change the status of your venue</h5>
-    </div>
-    <div *ngIf="suitsadmin" class="col-2">
+    <div *ngIf="suitsadmin" class="col-5">
       <button (click)="showdeleteconfrim()" *ngIf="!deleteconfrimshow && suitsadmin" class="btn btn-danger">Delete Venue</button>
       <div *ngIf="deleteconfrimshow" class="text-center">
         <h5>Are you sure you want to delete this Venue?</h5>
@@ -66,6 +61,17 @@
         <button (click)="deletevenue()" class="btn-danger">Delete</button>
       </div>
     </div>
+    <div *ngIf="pushfail" class="col-auto">
+      Venues must have an image
+    </div>
+  </div>
+<div class="row">
+    <div style="font-style: 9px" *ngIf="!suitsadmin" class="col-auto">
+      <h5>To Change the status of your venue please email admin@suitsandtables.com or call 312.957.7937
+
+        </h5>
+    </div>
+
     <div *ngIf="suitsadmin" class="col-5">
       <div class="float-right">
         <p style="font-style: 9px">All Changes Saved Automatically</p>
@@ -74,7 +80,7 @@
     <br>
     <br>
   </div>
-</div>
+
 
 
 <ul class="nav nav-tabs">
