--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueadminroomlist/venueadminroomlist.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueadminroomlist/venueadminroomlist.component.html
@@ -1,15 +1,22 @@
 <div class="container"> <!-- root row-->
   <div class="row">
-    <div class="col-6">
+    <div class="col-4">
       <h3><strong>Room List</strong></h3>
     </div>
-    <div class="col-6">
-      <div *ngIf="!venueobject.fullbuyout" class="float-right">
-        <button class="btn btn-outline-primary" (click)="fullbuyouttoggle()">Offer Full Buyout</button>
-      </div>
-      <div class="float-right">
-        <button *ngIf="!roomadded" class="btn btn-outline-primary" (click)="addroom()">+ Add Room</button>
-        <h4 *ngIf="roomadded">Room Added Below</h4>
+    <div class="col-8">
+      <div class="row">
+        <div class="col-6" *ngIf="!venueobject.fullbuyout">
+          <div class="float-right">
+            <button class="btn btn-outline-primary" (click)="fullbuyouttoggle()">Offer Full Buyout</button>
+          </div>
+
+        </div>
+        <div class="col-6">
+          <div class="float-right">
+            <button *ngIf="!roomadded" class="btn btn-outline-primary" (click)="addroom()">+ Add Room</button>
+            <h4 *ngIf="roomadded">Room Added Below</h4>
+          </div>
+        </div>
       </div>
     </div>
   </div>
