--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
@@ -1,9 +1,12 @@
 <div class="container">
   <div class="row align-items-start"> <!--toprow-->
-    <div id="venuephotosdiv" class="col-3">
+    <div id="venuephotosdiv" class="col-12">
       <div class="row">
-        <div class="auto">
-          <h5><strong>Venue Photos &nbsp;</strong><a *ngIf="!showphotoupload" (click)="venuephotodisplaytoggle()" id="venuephotoadd">+Add Photo</a></h5>
+        <div class="col-4">
+          <h5><strong>Venue Photos &nbsp;</strong><a *ngIf="!showphotoupload" (click)="venuephotodisplaytoggle()">+Add Photo</a> &nbsp;</h5>
+        </div>
+        <div class="col-2">
+          <h5 id="displayphotos" *ngIf="!showphotos && !showphotoupload" (click)="venuephotoshowtoggle()">Display Photos</h5>
         </div>
       </div>
     </div>
@@ -43,12 +46,6 @@
   </div>
 
 </div> <!--photorows-->
-<div class="row justify-content-center">
-  <div>
-    <button *ngIf="!showphotos && !showphotoupload" (click)="venuephotoshowtoggle()" id="venuephotoshow" class=" btn btn-success">Display Photos</button>
-  </div>
-</div> <!--addvenuebuttonrow-->
-<hr>
 <div class="row justify-content-start "> <!--venuedescriptionrow-->
   <h5><strong>Venue Description</strong></h5>
   <div class="col-12">
