fixed room and venue preview to work as intended. Also got room fullbuyout to work as intended. cuz I are good

--- a/src/app/mainroot/previewvenue/previewvenue.component.scss
+++ b/src/app/mainroot/previewvenue/previewvenue.component.scss
@@ -1,4 +1,9 @@
 $color-gray: rgb(236,236,236);
+
+.container{
+  margin-top: 15vh;
+}
+
 .Section {
   border-bottom: $color-gray solid 3px;
   padding: 1.5rem 1rem;
