--- a/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
@@ -38,7 +38,7 @@
 
   </div>
 </div>
-  <div class="row">
+  <div *ngIf="!onroompage" class="row">
     <div class="col-auto">
       <h5>
         <strong>Venue Status:</strong>
