--- a/src/app/mainroot/previewvenueroom/previewvenueroom.component.scss
+++ b/src/app/mainroot/previewvenueroom/previewvenueroom.component.scss
@@ -1,4 +1,8 @@
 $color-gray: rgb(236,236,236);
+
+.container{
+  margin-top: 15vh;
+}
 .Section {
   border-bottom: $color-gray solid 3px;
   padding: 3rem 0;
