kathy I made her happy

--- a/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
@@ -85,7 +85,7 @@
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" [routerLink]="['/admin',permission,'venue-admin', venuenamelinkready, venueid,'venuepage' ]">Venue Page</a>
+    <a class="nav-link" [routerLink]="['/admin',permission,'venue-admin', venuenamelinkready, venueid,'venuepage' ]">Info / Users</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/admin', permission, 'venue-admin',venuenamelinkready,venueid, 'profile']">Venue Profile</a>
