--- a/src/app/venueadmin/parentadminview/venueadminparentview/venuecreateedit/venuecreateedit.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venuecreateedit/venuecreateedit.component.html
@@ -83,7 +83,7 @@
         </div>
         <div *ngIf="suitspermission">
           <div class="restaurantprofiletext STnopadding">
-            <h4><strong>Venue Profile <span *ngIf="profileupdatesucess" style="color: green"> Updated Sucessfully</span></strong></h4>
+            <h4><strong>Information <span *ngIf="profileupdatesucess" style="color: green"> Updated Sucessfully</span></strong></h4>
           </div>
           <form (click)="activatevenueprofilesubmitbutton()"
                 (ngSubmit)="editvenueprofile()"
