--- a/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
+++ b/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
@@ -2,7 +2,7 @@
 <div id="filter" class="d-flex flex-column justify-content-center py-5">
   <div class="container">
     <div class=" row d-flex justify-content-between m-3 firstline">
-      <div class="select-down col-6 col-md-3 py-2">
+      <div class="select-down col-lg-4 col-md-4 col-sm-6 py-2">
 
         <div *ngIf="choicesload" class="spinner-container">
           <div class="spinner"></div>
@@ -12,7 +12,7 @@
 
       </div>
 
-      <div class="select-down col-6 col-md-3 py-2">
+      <div class="select-down col-lg-4 col-md-4 col-sm-6 py-2">
 
         <div *ngIf="choicesload" class="spinner-container">
           <div class="spinner"></div>
@@ -21,7 +21,7 @@
         <ng-multiselect-dropdown *ngIf="!choicesload" [data]="venuetypechoices2" [(ngModel)]="venuetypemodel" [settings]="venuetypedropdownsettings" (ngModelChange)="applyfilters()"  [placeholder]="'Type'"></ng-multiselect-dropdown>
       </div>
 
-      <div class="select-down col-6 col-md-3 py-2">
+      <div class="select-down col-lg-4 col-md-4 col-sm-6 py-2">
 
         <div *ngIf="choicesload" class="spinner-container">
           <div class="spinner"></div>
@@ -29,61 +29,51 @@
 
         <ng-multiselect-dropdown *ngIf="!choicesload" [data]="privacytypechoices2" [(ngModel)]="privacytypemodel" [settings]="privacydropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Privacy'"></ng-multiselect-dropdown>
       </div>
-    </div>
-    <div class="container">
-      <div class=" row d-flex justify-content-between m-3">
 
-        <div class="select-down col-4 col-md-3 py-2">
+    <div class="select-down col-lg-4 col-md-4 col-sm-6 py-2">
 
-          <div *ngIf="choicesload" class="spinner-container">
-            <div class="spinner"></div>
-          </div>
-
-          <ng-multiselect-dropdown id="cuisinesselect" *ngIf="!choicesload" [data]="cuisinechoices" [(ngModel)]="cuisinemodel" [settings]="cuisinedropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Cuisines'"></ng-multiselect-dropdown>
-        </div>
-
-        <div class="select-down col-4 col-md-3 py-2">
-          <div *ngIf="choicesload" class="spinner-container">
-            <div class="spinner"></div>
-          </div>
-          <ng-multiselect-dropdown id="amenityselect" *ngIf="!choicesload" [data]="ammenitieschoices" [(ngModel)]="ammenitiesmodel" [settings]=" ammenitiesdropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Ammenity'"></ng-multiselect-dropdown>
-        </div>
-        <!--
-        <div class="select-down col-6 col-md-3 py-2">
-          <div *ngIf="choicesload" class="spinner-container">
-            <div class="spinner"></div>
-          </div>
-          <ng-multiselect-dropdown id="seatingselect" *ngIf="!choicesload" [data]="seatingtypeschoices" [(ngModel)]="seatingtypesmodel" [settings]=" seatingtypesdropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Seating Types'"></ng-multiselect-dropdown>
-        </div>
-        -->
-        <form id="capacitygroup" #capacityform="ngForm" class="col-4  d-inline-block">
-          <div class="d-inline-block">
-            <select (click)="enablecapinput()"
-                    id="seatingdropdown"
-                    name="capacityselectinput"
-                    class="form-control"
-                    [ngModel]="capacityformreset">
-              <option selected value="">Capacity Type</option>
-              <option value="seated">Seated</option>
-              <option value="standing">Standing</option>
-            </select>
-          </div>
-          <div class=" d-inline-block">
-            <div class="form-group capacitynumberinput">
-                <input type="number"
-                   (change)="applyfilters()"
-                   [disabled]="disablecapacityinput"
-                   id="capacityamount"
-                   placeholder="Party Size"
-                   ngModel
-                   class="form-control"
-                   name="groupnumberinput">
-            </div>
-          </div>
-        </form>
+      <div *ngIf="choicesload" class="spinner-container">
+        <div class="spinner"></div>
       </div>
+
+      <ng-multiselect-dropdown id="cuisinesselect" *ngIf="!choicesload" [data]="cuisinechoices" [(ngModel)]="cuisinemodel" [settings]="cuisinedropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Cuisines'"></ng-multiselect-dropdown>
     </div>
+
+    <div class="select-down col-lg-4 col-md-4 col-sm-6 py-2">
+      <div *ngIf="choicesload" class="spinner-container">
+        <div class="spinner"></div>
+      </div>
+      <ng-multiselect-dropdown id="amenityselect" *ngIf="!choicesload" [data]="ammenitieschoices" [(ngModel)]="ammenitiesmodel" [settings]=" ammenitiesdropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Ammenity'"></ng-multiselect-dropdown>
+    </div>
+
+    <form id="capacitygroup" #capacityform="ngForm" class="col4  d-inline-block">
+      <div class="d-inline-block">
+        <select (click)="enablecapinput()"
+                id="seatingdropdown"
+                name="capacityselectinput"
+                class="form-control"
+                [ngModel]="capacityformreset">
+          <option selected value="">Capacity Type</option>
+          <option value="seated">Seated</option>
+          <option value="standing">Standing</option>
+        </select>
+      </div>
+      <div class=" d-inline-block">
+        <div class="form-group capacitynumberinput">
+            <input type="number"
+               (change)="applyfilters()"
+               [disabled]="disablecapacityinput"
+               id="capacityamount"
+               placeholder="Party Size"
+               ngModel
+               class="form-control"
+               name="groupnumberinput">
+        </div>
+      </div>
+    </form>
   </div>
+  </div>
+
   <div class="container">
     <div class="filter-option">
       <a class="rightbuttons" (click)="clearfilters()" style="cursor: pointer; color: red;">Clear All</a>
@@ -92,7 +82,7 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="ml-4 col-7">
+    <div class="ml-4 col-lg-7 col-md-7 col-sm-12 col-xs-12">
       <form>
         <input type="text"
                placeholder="Search By Venue Name"
