--- a/src/app/mainroot/roompage/roompage.component.scss
+++ b/src/app/mainroot/roompage/roompage.component.scss
@@ -114,6 +114,15 @@ $color-primary: rgb(83,139,197);
   top: -10vh;
 }
 
+@media screen and (max-width:992px ){
+  #rfpselect{
+    display: block;
+    position: relative;
+    top: 5vh;
+  }
+
+}
+
 #rfpsendselect{
   border-color: #00b3ee;
   color: #00b3ee;
