--- a/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
+++ b/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
@@ -81,7 +81,7 @@
   </div>
 </div>
 <div class="container">
-  <form>
+  <form (ngSubmit)="searchvenue()" #searchform="ngForm">
   <div class="row">
     <div class="col-lg-7 col-md-6 col-sm-6 col-xs-6">
         <input type="text"
