--- a/src/app/mainroot/navbar/navbar.component.html
+++ b/src/app/mainroot/navbar/navbar.component.html
@@ -16,7 +16,7 @@
       </li>
       <li *ngIf="showbrowse && !user.isvenueuser" class="nav-item">
         <div class="auto d-inline-block">
-          <label class="nav-link">Browse</label>
+          <label [routerLink]="['/browse', selectedcity]" style="cursor: pointer" class="nav-link">Browse</label>
         </div>
         <div class="auto d-inline-block">
           <select (change)="sendcity()"
