rfp save and such changes and updates

--- a/src/app/mainroot/navbar/navbar.component.html
+++ b/src/app/mainroot/navbar/navbar.component.html
@@ -425,7 +425,7 @@
               <input type="number"
                      class="form-control"
                      id="inputPhone"
-                     placeholder="Phone *"
+                     placeholder="Phone (digits only) *"
                      name="venuephone"
                      pattern="([0-9]{10})"
                      ngModel
