--- a/src/app/venueadmin/parentadminview/venueadminparentview/venuecreateedit/venuecreateedit.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venuecreateedit/venuecreateedit.component.html
@@ -238,7 +238,7 @@
                      required
                      id="newusernameinput"
                      name="newusernameinput"
-                     placeholder="Email *"
+                     placeholder="Name *"
                      ngModel
                      #newusernameinputcss="ngModel">
               <br>
